Simplify README